full and final fixes

--- a/index.html
+++ b/index.html
@@ -6,8 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>AZHAN Movies | Watch Anytime</title>
     <script src="https://cdn.tailwindcss.com"></script>
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css" />
-
+    <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css" rel="stylesheet" />
     <style>
         body {
             background: radial-gradient(ellipse at center, #0f0f0f 0%, #000000 100%);
@@ -36,58 +35,103 @@
         }
 
         body.light-mode {
-            background: #f0f0f0;
-            color: #111;
+            background: #f9f9f9 !important;
+            color: #111 !important;
         }
 
         body.light-mode .glass {
-            background: rgba(0, 0, 0, 0.06);
-            color: black;
-        }
-
-        body.light-mode .text-white {
-            color: black !important;
+            background: rgba(0, 0, 0, 0.03) !important;
+            border-color: #ccc !important;
+            color: #111 !important;
         }
 
         body.light-mode .genre-btn {
-            background: linear-gradient(to right, #e0e0e0, #cfcfcf);
-            color: #111 !important;
-            border: 1px solid #bbb;
+            color: #ffffff !important;
+            border: 1px solid #ccc;
+            background: linear-gradient(to right, #ffffff, #f0eded) !important;
         }
 
         body.light-mode .genre-btn:hover {
-            background-image: linear-gradient(to right, #00e0ff, #ff00c8);
+            background: linear-gradient(to right, #ff0080, #7928ca) !important;
             color: white !important;
+        }
+
+        body.light-mode .text-white {
+            color: #111 !important;
+        }
+
+        body.light-mode .bg-black {
+            background-color: #fff !important;
+        }
+
+        body.light-mode .text-gray-400 {
+            color: #333 !important;
+        }
+
+        body.light-mode .text-pink-400,
+        body.light-mode .text-fuchsia-400,
+        body.light-mode .text-cyan-400,
+        body.light-mode .text-yellow-400,
+        body.light-mode .text-blue-400 {
+            color: #e91e63 !important;
+        }
+
+        body.light-mode footer {
+            background-color: #e8e8e8 !important;
+            color: #333 !important;
+        }
+
+        body.light-mode input[type="search"] {
+            background-color: #fff !important;
+            color: #111 !important;
+            border: 1px solid #ec4899 !important;
+        }
+
+        body.light-mode input::placeholder {
+            color: #ec4899 !important;
+        }
+
+        body.light-mode input:focus {
+            outline: none !important;
+            --tw-ring-color: #ec4899 !important;
         }
     </style>
 </head>
 
 <body class="text-white font-sans">
 
-    <!-- ✅ Responsive Navbar -->
-    <nav class="glass sticky top-0 z-50 w-full shadow-lg">
-        <div class="max-w-7xl mx-auto flex items-center gap-3 px-4 py-3 md:px-6 md:py-5">
-            <!-- Logo -->
-            <a href="index.html" class="text-lg sm:text-2xl md:text-3xl font-extrabold neon whitespace-nowrap">
-                AZHAN Movies
-            </a>
-
-            <!-- Search Bar -->
-            <input id="search" type="search" placeholder="Search..."
-                class="flex-1 min-w-0 px-4 py-2 rounded-full bg-black text-white border border-pink-500 placeholder-pink-500 focus:outline-none focus:ring-2 focus:ring-pink-600" />
-
-            <!-- Settings Icon -->
-            <a href="settings.html" class="text-xl sm:text-2xl hover:text-cyan-400 transition ml-2" title="Settings">
-                <i class="fas fa-bars"></i>
-            </a>
+    <!-- Navbar -->
+    <nav class="glass sticky top-0 z-50 w-full shadow-md">
+        <div class="max-w-7xl mx-auto flex items-center justify-between px-4 py-3 md:px-6">
+            <a href="index.html" class="text-lg sm:text-2xl md:text-3xl font-extrabold neon">AZHAN Movies</a>
+            <div class="hidden sm:flex flex-1 mx-4">
+                <input id="search" type="search" placeholder="Search..."
+                    class="w-full px-4 py-2 rounded-full bg-black text-white border border-pink-500 placeholder-pink-500 focus:outline-none focus:ring-2 focus:ring-pink-600" />
+            </div>
+            <div class="relative">
+                <button id="menu-toggle" class="text-2xl hover:text-pink-400">
+                    <i class="fas fa-bars"></i>
+                </button>
+                <div id="dropdown-menu"
+                    class="absolute right-0 mt-3 w-48 bg-black rounded-lg shadow-lg py-2 hidden z-50 text-sm text-white">
+                    <a href="settings.html" class="block px-4 py-2 hover:bg-white/10"> Setting</a>
+                    <a href="favorites.html" class="block px-4 py-2 hover:bg-white/10">❤️ Favorites</a>
+                    <a href="#" class="block px-4 py-2 hover:bg-white/10">🔐 Account</a>
+                    <button id="mode-toggle" class="w-full text-left px-4 py-2 hover:bg-white/10">🌗 Toggle
+                        Theme</button>
+                </div>
+            </div>
+        </div>
+        <div class="sm:hidden px-4 pb-3">
+            <input id="search-mobile" type="search" placeholder="Search..."
+                class="w-full px-4 py-2 rounded-full bg-black text-white border border-pink-400 placeholder-pink-400 focus:outline-none focus:ring-2 focus:ring-pink-600" />
         </div>
     </nav>
 
-
-    <!-- Genre Buttons Placeholder -->
+    <!-- Genre Buttons -->
     <div class="px-4 md:px-10 mt-6 flex flex-wrap gap-4 justify-center" id="genre-buttons"></div>
 
-    <!-- Search Section -->
+    <!-- Search Results -->
     <section id="search-section" class="hidden px-4 md:px-10 py-8">
         <h2 class="text-2xl font-bold text-pink-400 mb-4">Search Results</h2>
         <div id="search-results"></div>
@@ -98,27 +142,19 @@
     <div id="homepage-sections">
         <section class="px-4 md:px-10 mt-10 mb-12">
             <h2 class="text-2xl font-bold text-fuchsia-400 mb-4">🔥 Trending</h2>
-            <div id="trending-container" class="flex gap-5 overflow-x-auto scrollbar-hide"></div>
+            <div id="trending-container" class="flex gap-5 overflow-x-auto scrollbar-hide snap-x snap-mandatory"></div>
         </section>
-
         <section class="px-4 md:px-10 mb-12">
             <h2 class="text-2xl font-bold text-cyan-400 mb-4">🌟 Popular</h2>
-            <div id="popular-container" class="flex gap-5 overflow-x-auto scrollbar-hide"></div>
+            <div id="popular-container" class="flex gap-5 overflow-x-auto scrollbar-hide snap-x snap-mandatory"></div>
         </section>
-
         <section class="px-4 md:px-10 mb-12">
             <h2 class="text-2xl font-bold text-yellow-400 mb-4">🏆 Top Rated</h2>
-            <div id="toprated-container" class="flex gap-5 overflow-x-auto scrollbar-hide"></div>
+            <div id="toprated-container" class="flex gap-5 overflow-x-auto scrollbar-hide snap-x snap-mandatory"></div>
         </section>
-
-        <section class="px-4 md:px-10 mb-12">
-            <h2 class="text-2xl font-bold text-blue-400 mb-4">🆕 New Releases</h2>
-            <div id="newest-container" class="flex gap-5 overflow-x-auto scrollbar-hide"></div>
-        </section>
-
         <section class="px-4 md:px-10 mb-24">
             <h2 class="text-2xl font-bold text-pink-400 mb-4">📅 Coming Soon</h2>
-            <div id="upcoming-container" class="flex gap-5 overflow-x-auto scrollbar-hide"></div>
+            <div id="upcoming-container" class="flex gap-5 overflow-x-auto scrollbar-hide snap-x snap-mandatory"></div>
         </section>
     </div>
 
@@ -141,7 +177,9 @@
                 <input type="email" placeholder="Email"
                     class="w-full px-3 py-2 rounded bg-zinc-900 text-white placeholder-gray-500 border border-gray-600" />
                 <button
-                    class="mt-3 w-full py-2 bg-gradient-to-r from-pink-500 to-fuchsia-500 rounded text-white font-semibold hover:brightness-110">Subscribe</button>
+                    class="mt-3 w-full py-2 bg-gradient-to-r from-pink-500 to-fuchsia-500 rounded text-white font-semibold hover:brightness-110">
+                    Subscribe
+                </button>
             </div>
             <div>
                 <h2 class="text-lg font-semibold text-white mb-2">Follow Us</h2>
@@ -155,6 +193,7 @@
         <div class="text-center text-sm text-gray-600 mt-10">&copy; 2025 AZHAN Movies. All rights reserved.</div>
     </footer>
 
+    <!-- JS -->
     <script src="app.js"></script>
 </body>
 
