--- a/movie.html
+++ b/movie.html
@@ -7,9 +7,15 @@
     <title>AZHAN Movie | Detail</title>
     <link href="src/output.css" rel="stylesheet" />
     <script src="https://cdn.jsdelivr.net/npm/@tailwindcss/browser@4"></script>
+
     <style>
         body {
             background: linear-gradient(145deg, #020617, #0f172a);
+        }
+
+        body.light-mode {
+            background: #fdfdfd !important;
+            color: #111 !important;
         }
 
         .scrollbar-hide::-webkit-scrollbar {
@@ -51,10 +57,90 @@
             -webkit-background-clip: text;
             -webkit-text-fill-color: transparent;
         }
+
+        /* Light mode overrides */
+        body.light-mode .text-white {
+            color: #111 !important;
+        }
+
+        body.light-mode .bg-\[\#0f172a\]\/80 {
+            background-color: #ffffff !important;
+            border-color: #ccc !important;
+        }
+
+        body.light-mode .text-gray-300 {
+            color: #444 !important;
+        }
+
+        body.light-mode .text-gray-400 {
+            color: #555 !important;
+        }
+
+        body.light-mode .text-cyan-100 {
+            color: #000 !important;
+        }
+
+        body.light-mode .text-transparent {
+            background-image: none !important;
+            -webkit-text-fill-color: #000 !important;
+        }
+
+        body.light-mode .bg-gradient-to-r {
+            background-image: none !important;
+        }
+
+        body.light-mode .border-cyan-400\/20 {
+            border-color: #ccc !important;
+        }
+
+        body.light-mode .border-cyan-500\/10,
+        body.light-mode .border-cyan-400\/10 {
+            border-color: #ddd !important;
+        }
+
+        body.light-mode .bg-\[\#1e293b\]\/40 {
+            background-color: #f9f9f9 !important;
+        }
+
+        body.light-mode .bg-cyan-500\/10 {
+            background-color: #000 !important;
+            color: #fff !important;
+        }
+
+        body.light-mode .text-cyan-400 {
+            color: #0077b6 !important;
+        }
+
+        body.light-mode .bg-gradient-to-r.from-purple-500 {
+            background-color: #e91e63 !important;
+        }
+
+        .theme-toggle {
+            position: fixed;
+            top: 1rem;
+            right: 1rem;
+            z-index: 100;
+            background: #0f172a;
+            color: white;
+            border: 1px solid #00e0ff;
+            padding: 0.5rem 1rem;
+            border-radius: 9999px;
+            cursor: pointer;
+            font-size: 12px;
+        }
+
+        body.light-mode .theme-toggle {
+            background: #ffffff;
+            color: #000;
+            border-color: #aaa;
+        }
     </style>
 </head>
 
 <body class="font-sans min-h-screen p-4 md:p-6 text-white">
+    <!-- Theme Toggle Button -->
+    <button class="theme-toggle" onclick="toggleTheme()">🌗 Toggle Theme</button>
+
     <!-- Movie Info Section -->
     <section id="movie-detail"
         class="w-full max-w-screen-lg mx-auto bg-[#0f172a]/80 backdrop-blur-xl border border-cyan-400/10 shadow-xl rounded-2xl p-4 md:p-8 lg:p-10 grid grid-cols-1 lg:grid-cols-[1fr_2fr] gap-6 md:gap-8 items-start mb-10">
@@ -88,12 +174,10 @@
             ).join(' ');
 
             const html = `
-        <!-- Poster -->
         <div class="w-full max-w-xs mx-auto md:mx-0">
           <img src="${poster}" alt="${movie.title}" class="rounded-xl w-full border border-cyan-500/10 shadow" />
         </div>
 
-        <!-- Details -->
         <div class="space-y-4 text-sm max-w-prose">
           <h1 class="text-xl md:text-2xl font-bold bg-gradient-to-r from-fuchsia-500 to-cyan-400 text-transparent bg-clip-text">
             ${movie.title}
@@ -147,6 +231,18 @@
             document.getElementById("cast-section").innerHTML = castHTML;
         }
 
+        // Theme toggling logic
+        function toggleTheme() {
+            const light = document.body.classList.toggle("light-mode");
+            localStorage.setItem("theme", light ? "light" : "dark");
+        }
+
+        // Apply saved theme on load
+        if (localStorage.getItem("theme") === "light") {
+            document.body.classList.add("light-mode");
+        }
+
+        // Load data
         if (movieId) {
             getMovieDetails(movieId);
             getMovieCast(movieId);
