search prblem solve

--- a/index.html
+++ b/index.html
@@ -134,7 +134,8 @@
     <!-- Search Results -->
     <section id="search-section" class="hidden px-4 md:px-10 py-8">
         <h2 class="text-2xl font-bold text-pink-400 mb-4">Search Results</h2>
-        <div id="search-results"></div>
+        <div id="search-results" class="flex flex-col gap-10"></div>
+
         <p id="no-results" class="text-center text-xl text-gray-400 mt-10 hidden">No movies found.</p>
     </section>
 
