--- a/index.html
+++ b/index.html
@@ -153,6 +153,10 @@
             <h2 class="text-2xl font-bold text-yellow-400 mb-4">🏆 Top Rated</h2>
             <div id="toprated-container" class="flex gap-5 overflow-x-auto scrollbar-hide snap-x snap-mandatory"></div>
         </section>
+        <section class="px-4 md:px-10 mb-12">
+            <h2 class="text-2xl font-bold text-blue-400 mb-4">🆕 Newest</h2>
+            <div id="newest-container" class="flex gap-5 overflow-x-auto scrollbar-hide snap-x snap-mandatory"></div>
+        </section>
         <section class="px-4 md:px-10 mb-24">
             <h2 class="text-2xl font-bold text-pink-400 mb-4">📅 Coming Soon</h2>
             <div id="upcoming-container" class="flex gap-5 overflow-x-auto scrollbar-hide snap-x snap-mandatory"></div>
