--- a/settings.html
+++ b/settings.html
@@ -60,7 +60,7 @@
             <div class="space-y-6">
                 <!-- Theme Toggle -->
                 <div class="flex items-center justify-between">
-                    <span class="text-lg">Toggle Dark / Light Mode</span>
+                    <span class="text-lg">Toggle Mode</span>
                     <button id="mode-toggle"
                         class="text-white bg-gradient-to-r from-fuchsia-600 to-pink-500 px-4 py-2 rounded-full hover:brightness-110 transition">
                         Toggle Mode
