--- a/index.html
+++ b/index.html
@@ -98,55 +98,36 @@
     </style>
 </head>
 
-<body class="text-white font-sans">
-
-    <!-- Navbar -->
+<body class="text-white font-sans"> <!-- Navbar -->
     <nav class="glass sticky top-0 z-50 w-full shadow-md">
-        <div class="max-w-7xl mx-auto flex items-center justify-between px-4 py-3 md:px-6">
-            <a href="index.html" class="text-lg sm:text-2xl md:text-3xl font-extrabold neon">AZHAN Movies</a>
-            <div class="hidden sm:flex flex-1 mx-4">
-                <input id="search" type="search" placeholder="Search..."
+        <div class="max-w-7xl mx-auto flex items-center justify-between px-4 py-3 md:px-6"> <a href="index.html"
+                class="text-lg sm:text-2xl md:text-3xl font-extrabold neon">AZHAN Movies</a>
+            <div class="hidden sm:flex flex-1 mx-4"> <input id="search" type="search" placeholder="Search..."
                     class="w-full px-4 py-2 rounded-full bg-black text-white border border-pink-500 placeholder-pink-500 focus:outline-none focus:ring-2 focus:ring-pink-600" />
             </div>
-            <div class="relative">
-                <button id="menu-toggle" class="text-2xl hover:text-pink-400">
-                    <i class="fas fa-bars"></i>
-                </button>
+            <div class="relative"> <button id="menu-toggle" class="text-2xl hover:text-pink-400"> <i
+                        class="fas fa-bars"></i> </button>
                 <div id="dropdown-menu"
                     class="absolute right-0 mt-3 w-48 bg-black rounded-lg shadow-lg py-2 hidden z-50 text-sm text-white">
-                    <a href="settings.html" class="block px-4 py-2 hover:bg-white/10"> Setting</a>
-                    <a href="favorites.html" class="block px-4 py-2 hover:bg-white/10">❤️ Favorites</a>
-                    <a href="#" class="block px-4 py-2 hover:bg-white/10">🔐 Account</a>
-                    <button id="mode-toggle" class="w-full text-left px-4 py-2 hover:bg-white/10">🌗 Toggle
-                        Theme</button>
-                </div>
+                    <a href="settings.html" class="block px-4 py-2 hover:bg-white/10"> Setting</a> <a
+                        href="favorites.html" class="block px-4 py-2 hover:bg-white/10">❤️ Favorites</a> <a href="#"
+                        class="block px-4 py-2 hover:bg-white/10">🔐 Account</a> <button id="mode-toggle"
+                        class="w-full text-left px-4 py-2 hover:bg-white/10">🌗 Toggle Theme</button> </div>
             </div>
         </div>
-        <div class="sm:hidden px-4 pb-3">
-            <input id="search-mobile" type="search" placeholder="Search..."
+        <div class="sm:hidden px-4 pb-3"> <input id="search-mobile" type="search" placeholder="Search..."
                 class="w-full px-4 py-2 rounded-full bg-black text-white border border-pink-400 placeholder-pink-400 focus:outline-none focus:ring-2 focus:ring-pink-600" />
         </div>
-    </nav>
-
-    <!-- Genre Buttons -->
-    <!-- Genre Dropdown -->
-    <div class="px-4 md:px-10 mt-6">
-        <select id="genre-select"
+    </nav> <!-- Genre Buttons --> <!-- Genre Dropdown -->
+    <div class="px-4 md:px-10 mt-6"> <select id="genre-select"
             class="px-4 py-2 rounded-full bg-black text-white border border-pink-500 focus:outline-none focus:ring-2 focus:ring-pink-600">
-            <option value="all">All Genres</option>
-            <!-- JS will populate the rest -->
-        </select>
-    </div>
-
-    <!-- Search Results -->
+            <option value="all">All Genres</option> <!-- JS will populate the rest -->
+        </select> </div> <!-- Search Results -->
     <section id="search-section" class="hidden px-4 md:px-10 py-8">
         <h2 class="text-2xl font-bold text-pink-400 mb-4">Search Results</h2>
         <div id="search-results" class="flex flex-col gap-10"></div>
-
         <p id="no-results" class="text-center text-xl text-gray-400 mt-10 hidden">No movies found.</p>
-    </section>
-
-    <!-- Homepage Sections -->
+    </section> <!-- Homepage Sections -->
     <div id="homepage-sections">
         <section class="px-4 md:px-10 mt-10 mb-12">
             <h2 class="text-2xl font-bold text-fuchsia-400 mb-4">🔥 Trending</h2>
@@ -168,9 +149,7 @@
             <h2 class="text-2xl font-bold text-pink-400 mb-4">📅 Coming Soon</h2>
             <div id="upcoming-container" class="flex gap-5 overflow-x-auto scrollbar-hide snap-x snap-mandatory"></div>
         </section>
-    </div>
-
-    <!-- Footer -->
+    </div> <!-- Footer -->
     <footer class="bg-black py-10 px-6 border-t border-gray-800">
         <div class="max-w-7xl mx-auto grid grid-cols-1 md:grid-cols-2 lg:grid-cols-4 gap-8 text-gray-400">
             <div>
@@ -185,27 +164,23 @@
                 </ul>
             </div>
             <div>
-                <h2 class="text-lg font-semibold text-white mb-2">Stay Updated</h2>
-                <input type="email" placeholder="Email"
+                <h2 class="text-lg font-semibold text-white mb-2">Stay Updated</h2> <input type="email"
+                    placeholder="Email"
                     class="w-full px-3 py-2 rounded bg-zinc-900 text-white placeholder-gray-500 border border-gray-600" />
                 <button
                     class="mt-3 w-full py-2 bg-gradient-to-r from-pink-500 to-fuchsia-500 rounded text-white font-semibold hover:brightness-110">
-                    Subscribe
-                </button>
+                    Subscribe </button>
             </div>
             <div>
                 <h2 class="text-lg font-semibold text-white mb-2">Follow Us</h2>
-                <div class="flex gap-4 text-xl">
-                    <a href="#" class="hover:text-blue-500"><i class="fab fa-facebook"></i></a>
-                    <a href="#" class="hover:text-pink-500"><i class="fab fa-instagram"></i></a>
-                    <a href="#" class="hover:text-blue-400"><i class="fab fa-twitter"></i></a>
-                </div>
+                <div class="flex gap-4 text-xl"> <a href="#" class="hover:text-blue-500"><i
+                            class="fab fa-facebook"></i></a> <a href="#" class="hover:text-pink-500"><i
+                            class="fab fa-instagram"></i></a> <a href="#" class="hover:text-blue-400"><i
+                            class="fab fa-twitter"></i></a> </div>
             </div>
         </div>
         <div class="text-center text-sm text-gray-600 mt-10">&copy; 2025 AZHAN Movies. All rights reserved.</div>
-    </footer>
-
-    <!-- JS -->
+    </footer> <!-- JS -->
     <script src="app.js"></script>
 </body>
 
